--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.7.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "vee-validate": "^4.12.6",
+    "vue": "^3.4.23",
+    "vue-demi": "^0.14.7",
     "vue-router": "^4.3.1",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
