--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vue/composition-api": "^1.7.2",
+    "axios": "^1.6.8",
     "core-js": "^3.8.3",
     "vee-validate": "^4.12.6",
     "vue": "^3.4.23",
@@ -23,6 +24,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/compiler-sfc": "^3.4.23",
     "autoprefixer": "^10.4.19",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
