--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
+    "lodash": "^4.17.21",
     "vee-validate": "^4.12.6",
     "vue": "^3.4.23",
     "vue-demi": "^0.14.7",
